--- a/docker/k8s/newrelic-plugin-agent.cfg
+++ b/docker/k8s/newrelic-plugin-agent.cfg
@@ -1,15 +1,16 @@
 %YAML 1.2
 ---
 Application:
-  license_key: 2ea59e7a43d3b99e1d041200c291c4060300b337
+  license_key: NEWRELIC_KEY
   wake_interval: 30
 
   pgbouncer:
     host: localhost
     port: 6432
-    user: newrelic
+    user: PGBOUNCER_STATS_USER
     database: pgbouncer
-    password: password
+    password: PGBOUNCER_STATS_PASSWORD
+    name: PGBOUNCER_NAME
 
 Daemon:
   user: newrelic
