Ad more variables to configure agent

--- a/docker/k8s/newrelic-plugin-agent.cfg
+++ b/docker/k8s/newrelic-plugin-agent.cfg
@@ -2,11 +2,11 @@
 ---
 Application:
   license_key: NEWRELIC_KEY
-  wake_interval: 30
+  wake_interval: WAKE_INTERVAL
 
   pgbouncer:
-    host: localhost
-    port: 6432
+    host: PGBOUNCER_HOST
+    port: PGBOUNCER_PORT
     user: PGBOUNCER_STATS_USER
     database: pgbouncer
     password: PGBOUNCER_STATS_PASSWORD
