Modify dockerfile to use kubernetes plugins and custom naming script

--- a/docker/k8s/Dockerfile
+++ b/docker/k8s/Dockerfile
@@ -7,12 +7,12 @@ COPY ./ src
 WORKDIR /src
 
 RUN apk add --update python python-dev py-pip build-base postgresql-dev && \
-		pip install pyyaml psycopg2 && \
+		pip install pyyaml psycopg2 kubernetes && \
 		python setup.py install && \
 		rm -rf /var/cache/apk/*
 
 RUN mkdir -p /etc/newrelic /var/log/newrelic /var/run/newrelic
 ADD $ROOT_DIR/newrelic-plugin-agent.cfg /etc/newrelic/newrelic-plugin-agent.cfg
 ADD $ROOT_DIR/bin/newrelic-plugin-agent.sh /newrelic-plugin-agent.sh
-
+ADD $ROOT_DIR/bin/get_k8s_pod_suffix.py /get_k8s_pod_suffix.py
 ENTRYPOINT ["/newrelic-plugin-agent.sh"]
